test/conformance/chainsaw/ttl/propagation-policy/foreground/pod-assert.yaml
apiVersion: v1
kind: Pod
status:
  phase: Running
