test/conformance/chainsaw/ttl/propagation-policy/foreground/pod-deleted-assert.yaml
apiVersion: v1
kind: Pod
status:
  phase: Succeeded
