test/conformance/chainsaw/ttl/propagation-policy/foreground/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: foreground
spec:
  steps:
  - name: Create job with foreground deletion policy
    try:
    - create:
        file: job.yaml
  - name: Wait pod is running
    try:
    - assert:
        file: pod-assert.yaml
  - name: Delete job with foreground deletion policy
    try:
    - delete:
        file: job.yaml
  - name: Assert pod is no longer running
    try:
    - assert:
        file: pod-deleted-assert.yaml
